@@ -1,4 +1,4 @@
-Copyright (c) 2025 Jeff Michaud
+Copyright (c) 2025 Jeff Michaud <cometaj2@proton.me>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of
 this software and associated documentation files (the "Software"), to deal in
